# scratchpad-cpp

./: .cmake-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.sh  dummy_classes.h  main.cpp  run_the_example.sh
.devcontainer/: Dockerfile  devcontainer.json  setup_ubuntu_22.sh  setup_ubuntu_24.sh
.github/workflows/: ci.yaml
cmake/: CMakeDependencyDiagrams.cmake  add_executable.cmake  my_add_executable.cmake  my_add_unit_test.cmake
cmake/CMakeDependencyDiagrams/: CMakeGraphVizOptions.cmake  convert_dot_files_to_png.sh  index.html
convert-float-to-two-bytes/: CMakeLists.txt  main.cpp
dummy-classes/: dummy_classes.h
dummy_classes/: CMakeLists.txt
include/: modules.h
memory_limit_with_cgroup/: CMakeLists.txt  main.cpp  run_the_example.sh
sleep-methods/: CMakeLists.txt  Report.md  definitions.h.in  main.cpp  plot_results.gp.in  types.h  utils.cpp  utils.h
sleep_methods/: CMakeLists.txt  Sleep_results.md
src/: CMakeLists.txt  my_lib.cpp
src/algorithms/: CMakeLists.txt
src/algorithms/flocking_algorithm/: CMakeLists.txt  boid.cpp  boid.h  main.cpp  mainwindow.cpp  mainwindow.h
src/architecture/: CMakeLists.txt
src/architecture/dependency_injection_via_function/: CMakeLists.txt  class.cpp  class.h  main.cpp
src/architecture/dummy-classes/: dummy_classes.h  main.cpp
src/architecture/unit-testing-stub-with-singleton-facade/: CMakeLists.txt  Readme.md  csv_logger_facade_singleton.cpp  csv_logger_interface.h  csv_logger_mock.h  stub_usage_example.cpp  third_party_class.h
src/architecture/unit-testing-stub-with-singleton-facade/tests/: CMakeLists.txt  csv_logger_facade_singleton_test.cpp  stub_unit_test.cpp
src/cmake_how_tos/: CMakeLists.txt
src/cmake_how_tos/code_generation_of_templated_interface/: CMakeLists.txt  Readme.md  log_interface_derived.h.in  log_interface_implementations.cpp  templated_log_interface.h
src/cmake_how_tos/synchronize_implementation_and_documentation/: CMakeLists.txt  Readme.md  Requirements.md.in  main.cpp  main.cpp.in  parameter_list.cmake
src/coding_interview_task/: CMakeLists.txt  CODING_TASK_CHEAT_SHEET.md
src/coding_interview_task/apple_stocks/: TASK.md  main.cpp
src/coding_interview_task/coding_task_template/: CMakeLists.txt  TASK.md  main.cpp
src/coding_interview_task/find_median/: TASK.md  main.cpp
src/coding_interview_task/fruits_basket/: TASK.md  main.cpp
src/coding_interview_task/implement_binary_tree/: TASK.md  main.cpp
src/coding_interview_task/intersection_over_union/: TASK.md  main.cpp
src/coding_interview_task/longest_substring_after_replacement/: TASK.md  main.cpp
src/coding_interview_task/longest_substring_of_k_distinct_character/: TASK.md  main.cpp
src/coding_interview_task/matrix_multiplication/: TASK.md  main.cpp
src/coding_interview_task/permutation_palindrome/: TASK.md  main.cpp
src/coding_interview_task/reverse_64_bit_integer_digit/: TASK.md  main.cpp
src/coding_interview_task/stack_implementation/: TASK.md  main.cpp
src/coding_interview_task/target_sum/: TASK.md  main.cpp
src/coding_interview_task/triplet_of_integer_summing_to_zero/: TASK.md  main.cpp
src/convert-float-to-two-bytes/: CMakeLists.txt  Readme.md  main.cpp
src/cpp_features_example/: CMakeLists.txt
src/cpp_features_example/cpp_20/format/: CMakeLists.txt  main.cpp
src/cpp_features_example/std-any-example/: main.cpp
src/example-of-bad-things/: CMakeLists.txt
src/example-of-bad-things/emplace_back_with_default_object/: CMakeLists.txt  Readme.md  main.cpp  payload.h
src/example-of-bad-things/slicing_example/: CMakeLists.txt  classes.h
src/linux_environment/: CMakeLists.txt
src/linux_environment/memory-limit-with-cgroup/: CMakeLists.txt  main.cpp  run_the_example.sh
src/linux_environment/sleep-methods/: CMakeLists.txt  main.cpp  plot_results.gp.in  utils.cpp
src/networking/: CMakeLists.txt  README.md
src/networking/udp_packet_receiver/: CMakeLists.txt  main.cpp
src/networking/udp_packet_sender/: CMakeLists.txt  main.cpp
src/networking/udp_packet_sender_and_receiver/: CMakeLists.txt  arguments_parsing.cpp  arguments_parsing.h  udp_packet_receiver.cpp  udp_packet_sender.cpp
src/sleep-methods/: Report.md  main.cpp  types.h  utils.h
src/slicing_example/: Readme.md  main.cpp
src/type_conversion/: CMakeLists.txt  main.cpp
src/unit-testing-stub-with-singleton-facade/: csv_logger_facade_singleton.h  csv_logger_writer.h  third_party_class.h  third_party_class_stub.cpp
src/unit-testing-stub-with-singleton-facade/tests/: csv_logger_facade_singleton_test.cpp
std-any-example/: CMakeLists.txt  main.cpp
