cmake_minimum_required(VERSION 3.21)
project(Scratchpad)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(add_executable)
add_subdirectory(dummy-classes)
add_subdirectory(memory-limit-with-cgroup)
add_subdirectory(sleep-methods)
add_subdirectory(convert-float-to-two-bytes)
add_subdirectory(std-any-example)
