cmake_minimum_required (VERSION 3.21)
enable_testing ()
set (CMAKE_COLOR_DIAGNOSTICS ON)
project (Scratchpad)
set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
file (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}")
include (add_executable)
include (add_unit_test)
include (CMakeDependencyDiagrams)
add_subdirectory (src)
