cmake_minimum_required (VERSION 3.21)
enable_testing ()
set (CMAKE_COLOR_DIAGNOSTICS ON)
project (Scratchpad)
set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
file (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}")
include (my_add_executable)
include (my_add_unit_test)
include ("/usr/share/CMakeDependencyDiagram/CMakeDependencyDiagram.cmake")
add_subdirectory (src)
