add_subdirectory (dummy-classes)

add_subdirectory (sleep-methods)
add_subdirectory (convert-float-to-two-bytes)
add_subdirectory (std-any-example)
add_subdirectory (networking)
# add_subdirectory(type_conversion)

add_subdirectory (cmake_how_tos)
add_subdirectory (architecture)
add_subdirectory (linux_environment)
