add_subdirectory (sleep-methods)
add_subdirectory (convert-float-to-two-bytes)

add_subdirectory (networking)
# add_subdirectory(type_conversion)

add_subdirectory (cmake_how_tos)
add_subdirectory (architecture)
add_subdirectory (linux_environment)
add_subdirectory (cpp_features_example)
add_subdirectory (slicing_example)
