add_subdirectory (algorithms)
add_subdirectory (architecture)
add_subdirectory (cmake_how_tos)
add_subdirectory (cpp_features_example)
add_subdirectory (example-of-bad-things)
add_subdirectory (linux_environment)
add_subdirectory (networking)

add_subdirectory (convert-float-to-two-bytes)
add_subdirectory (type_conversion)

add_subdirectory (coding_interview_task)
