add_subdirectory (triplet_of_integer_summing_to_zero)
add_subdirectory (coding_task_template)
add_subdirectory (permutation_palindrome)
add_subdirectory (reverse_64_bit_integer_digit)
add_subdirectory (stack_implementation)
add_subdirectory (fruits_basket)
add_subdirectory (longest_substring_of_k_distinct_character)
add_subdirectory (implement_binary_tree)
add_subdirectory (intersection_over_union)
add_subdirectory (target_sum)
add_subdirectory (matrix_multiplication)
add_subdirectory (apple_stocks)
add_subdirectory (find_median)
add_subdirectory (longest_substring_after_replacement)
